# dotfiles-but-better

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmodules  .inputrc  .profile  .rgignore  .stow-local-ignore  .vimrc  README.md  bare-metal.stow-local-ignore  configuration.nix  flake.nix  hardware-configuration.nix  install.sh
.config/: arkrc  dolphinrc  kdeglobals  kglobalshortcutsrc  ktrashrc  kwinrc  kwinrulesrc  plasmarc
.config/alacritty/: alacritty.toml
.config/arch/: README.md  autologin.conf  automatic-updates.service  booster.yaml  greetd.toml  install.sh  limine.conf  partitions.layout
.config/atuin/: atuin-receipt.json  config.toml
.config/change-fzf/: directories.toml
.config/edit-fzf/: files.toml
.config/fish/: .devcontainer.json  .editorconfig  .rgignore  config.fish  fish_plugins  fish_variables
.config/fish/lib/: .gitignore  notify-phone.py  pyproject.toml  requirements.dev.txt  requirements.txt
.config/flameshot/: flameshot.ini
.config/fontconfig/: fonts.conf
.config/git/: config
.config/gtk-3.0/: settings.ini
.config/home-manager/: home.nix
.config/hypr/: hyprland.conf
.config/i3/: autostart.conf  config  settings.conf  theme.conf  window-rules.conf  workspaces.conf
.config/lazygit/: config.yml
.config/mako/: config
.config/niri/: README.md  autostart.kdl  backup.kdl  config.kdl  keybinds.kdl  monitors.kdl  rules.kdl  (+5 more)
.fonts/: .uuid
.ssh/: config
lib/: arch.stow-local-ignore  default.stow-local-ignore  fedora.stow-local-ignore  nixos.stow-local-ignore
timers/: docker.timer  install.sh  tailscaled.timer
(+205 files in other folders)
