[project]
requires-python = ">=3.13"

[tool.pyright]
pythonversion = "^3.13"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 125
target-version = "py313"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
